build should be a little faster with test/deploy using the same tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
   email: false
 
 script:
-- docker build --rm -t chrisruffalo/buildahbox:test  .
+- ./deploy
 
 deploy:
   provider: script
