updated version created build script using buildah container deploy and build are now separate changed travis to use new build mechanism refined container buildah mount now works updated readme removed Dockerfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ notifications:
   email: false
 
 script:
-- ./deploy.sh
+- ./build.sh
 
 deploy:
   provider: script
   script:
-  - ./deploy.sh 1
+  - ./deploy.sh
