deploy script spits out a log at the end travis-deploy combines both deploy steps travis.yml updated to support single script deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,4 @@ deploy:
   on:
     branch: release
   provider: script
-  script:
-  - ./deploy.sh
-  - PREFIX="debian-" ./deploy.sh
+  script: ./travis-deploy.sh
