now the version comes from the branch/tag and builds only happen on tags that match the regex for the version like "2.4.3.1" or "10.1.3.0" or whatever.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,13 @@ notifications:
   email: false
 
 script:
+- export VERSION=${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH}
 - ./build.sh
 - SRC_CONTAINER="debian" SRC_TAG="stretch-slim" PREFIX="debian-" ./build.sh
 
 deploy:
   on:
-    branch: release
+    all_branches: true
+    condition: ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^[0-9]+\.[0-9]?\.[0-9]?\.[0-9]?$
   provider: script
   script: ./travis-deploy.sh
